[project]
name = "ryetest"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "HarukaKajita", email = "kajitaj63b3@gmail.com" }
]
dependencies = [
    "u-msgpack-python>=2.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ryetest"]
